force-app/main/default/objects/Insurance_Verification__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <label>Insurance Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21st Century</fullName>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>Allstate</fullName>
            </value>
            <value>
                <fullName>Ameriprise</fullName>
            </value>
            <value>
                <fullName>Esurance</fullName>
            </value>
            <value>
                <fullName>Farmers</fullName>
            </value>
            <value>
                <fullName>Geico</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual</fullName>
            </value>
            <value>
                <fullName>MetLife</fullName>
            </value>
            <value>
                <fullName>NJM</fullName>
            </value>
            <value>
                <fullName>Plymouth Rock</fullName>
            </value>
            <value>
                <fullName>Progressive</fullName>
            </value>
            <value>
                <fullName>State Farm</fullName>
            </value>
            <value>
                <fullName>The Heartford</fullName>
            </value>
            <value>
                <fullName>USAA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>