force-app/main/default/objects/Insurance_Verification__c/fields/Insurance_Claim_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Claim_Address__c</fullName>
    <label>Insurance Claim Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>