force-app/main/default/objects/Insurance_Verification__c/fields/Insurance_Reimbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Reimbursement_Type__c</fullName>
    <label>Insurance Reimbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Reimbursement_Type</valueSetName>
    </valueSet>
</CustomField>