force-app/main/default/objects/Insurance_Verification__c/fields/Is_Address_Listed_on_Claim_in_Nj_or_NY__c.field-meta.xml
<CustomField>
    <fullName>Is_Address_Listed_on_Claim_in_Nj_or_NY__c</fullName>
    <inlineHelpText>If NY claim, is Patient&apos;s address listed on claim in NJ or NY?</inlineHelpText>
    <label>Is Address Listed on Claim in Nj or NY?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NJ</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>