force-app/main/default/objects/Insurance_Verification__c/fields/Is_Auth_Req_d_Over_500__c.field-meta.xml
<CustomField>
    <fullName>Is_Auth_Req_d_Over_500__c</fullName>
    <label>Is Auth Req&apos;d Over $500?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>