force-app/main/default/objects/Insurance_Verification__c/fields/Is_Botox_DX_Driven__c.field-meta.xml
<CustomField>
    <fullName>Is_Botox_DX_Driven__c</fullName>
    <label>Is Botox DX Driven?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>