force-app/main/default/objects/Insurance_Verification__c/fields/Is_the_member_allowed_another_unit__c.field-meta.xml
<CustomField>
    <fullName>Is_the_member_allowed_another_unit__c</fullName>
    <inlineHelpText>Only if answered  &quot;yes&quot; from previous question</inlineHelpText>
    <label>Is the member allowed another unit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered No to previous question</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>