force-app/main/default/objects/Insurance_Verification__c/fields/Is_the_Pre_OP_Testing_Process_Reqd__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Pre_OP_Testing_Process_Reqd__c</fullName>
    <label>Is the Pre-OP Testing Process Reqd?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>