force-app/main/default/objects/Insurance_Verification__c/fields/Is_there_a_separate_ded_for_orthotics__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_separate_ded_for_orthotics__c</fullName>
    <label>Is there a separate ded for orthotics?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>