force-app/main/default/objects/Insurance_Verification__c/fields/IV_Type__c.field-meta.xml
<CustomField>
    <fullName>IV_Type__c</fullName>
    <label>IV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major Med Primary Only</fullName>
            </value>
            <value>
                <fullName>Major Med Primary &amp; Secondary</fullName>
            </value>
            <value>
                <fullName>Medicare Only</fullName>
            </value>
            <value>
                <fullName>Medicare w/ Supplemental</fullName>
            </value>
            <value>
                <fullName>Medicare w/ True Secondary</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage Only</fullName>
            </value>
            <value>
                <fullName>PIP/MVA Only</fullName>
            </value>
            <value>
                <fullName>PIP/MVA w/ Major Med</fullName>
            </value>
            <value>
                <fullName>WC Only</fullName>
            </value>
            <value>
                <fullName>WC w/ Major Med</fullName>
            </value>
            <value>
                <fullName>Cash Pay</fullName>
            </value>
            <value>
                <fullName>Options (in this exact order):</fullName>
                <isActive>false</isActive>
                <label>Options (in this exact order):</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>