force-app/main/default/objects/Insurance_Verification__c/fields/J0585_Botox__c.field-meta.xml
<CustomField>
    <fullName>J0585_Botox__c</fullName>
    <label>J0585 Botox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>