force-app/main/default/objects/Insurance_Verification__c/fields/J0585_DX_Driven__c.field-meta.xml
<CustomField>
    <fullName>J0585_DX_Driven__c</fullName>
    <label>J0585 - DX Driven?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>