force-app/main/default/objects/Insurance_Verification__c/fields/J7322_Hymovis_Gel_Inj__c.field-meta.xml
<CustomField>
    <fullName>J7322_Hymovis_Gel_Inj__c</fullName>
    <label>J7322 Hymovis Gel Inj</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>