force-app/main/default/objects/Insurance_Verification__c/fields/Knee_Brace_L1843__c.field-meta.xml
<CustomField>
    <fullName>Knee_Brace_L1843__c</fullName>
    <label>Knee Brace: L1843-L1846</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>