force-app/main/default/objects/Insurance_Verification__c/fields/LESI_62323__c.field-meta.xml
<CustomField>
    <fullName>LESI_62323__c</fullName>
    <label>LESI: 62323</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>