force-app/main/default/objects/Insurance_Verification__c/fields/LSO_L0180__c.field-meta.xml
<CustomField>
    <fullName>LSO_L0180__c</fullName>
    <label>LSO: L0180</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>