force-app/main/default/objects/Insurance_Verification__c/fields/Lumbar_Discectomy_63030__c.field-meta.xml
<CustomField>
    <fullName>Lumbar_Discectomy_63030__c</fullName>
    <label>Lumbar Discectomy 63030</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>