force-app/main/default/objects/Insurance_Verification__c/fields/Major_Joint_Inj_20610__c.field-meta.xml
<CustomField>
    <fullName>Major_Joint_Inj_20610__c</fullName>
    <label>Major Joint Inj: 20610</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>