force-app/main/default/objects/Insurance_Verification__c/fields/Manual_Therapy_Cupping_97139__c.field-meta.xml
<CustomField>
    <fullName>Manual_Therapy_Cupping_97139__c</fullName>
    <label>Manual Therapy(Cupping): 97139</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>