force-app/main/default/objects/Insurance_Verification__c/fields/Massage_97124__c.field-meta.xml
<CustomField>
    <fullName>Massage_97124__c</fullName>
    <label>Massage: 97124</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>