force-app/main/default/objects/Insurance_Verification__c/fields/MBB_L2330__c.field-meta.xml
<CustomField>
    <fullName>MBB_L2330__c</fullName>
    <label>MBB: L2330</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>