force-app/main/default/objects/Insurance_Verification__c/fields/MD_Codes_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>MD_Codes_Auth_Phone__c</fullName>
    <label>MD Codes Auth Phone #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>