force-app/main/default/objects/Insurance_Verification__c/fields/MD_Codes_Comments__c.field-meta.xml
<CustomField>
    <fullName>MD_Codes_Comments__c</fullName>
    <label>MD Codes Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>