force-app/main/default/objects/Insurance_Verification__c/fields/MD_Codes_No_OON__c.field-meta.xml
<CustomField>
    <fullName>MD_Codes_No_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MD Codes No OON</label>
    <type>Checkbox</type>
</CustomField>