force-app/main/default/objects/Insurance_Verification__c/fields/MD_Notes__c.field-meta.xml
<CustomField>
    <fullName>MD_Notes__c</fullName>
    <label>MD Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>