force-app/main/default/objects/Insurance_Verification__c/fields/Medical_OOP_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Medical_OOP_Responsibility__c</fullName>
    <inlineHelpText>PA for Medical Treatment</inlineHelpText>
    <label>Medical OOP Responsibility</label>
    <length>225</length>
    <type>Text</type>
</CustomField>