force-app/main/default/objects/Insurance_Verification__c/fields/Medicare_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Additional_Comments__c</fullName>
    <label>Medicare Additional Comments</label>
    <type>TextArea</type>
</CustomField>