force-app/main/default/objects/Insurance_Verification__c/fields/Medicare_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Deductible__c</fullName>
    <label>Medicare Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>