force-app/main/default/objects/Insurance_Verification__c/fields/Medicare_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Effective_Date__c</fullName>
    <label>Medicare Effective Date</label>
    <type>Date</type>
</CustomField>