force-app/main/default/objects/Insurance_Verification__c/fields/Medicare_ID__c.field-meta.xml
<CustomField>
    <fullName>Medicare_ID__c</fullName>
    <label>Medicare ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>