force-app/main/default/objects/Insurance_Verification__c/fields/Medicare_Primary__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Primary__c</fullName>
    <label>Medicare Primary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>