force-app/main/default/objects/Insurance_Verification__c/fields/MG2_C4_Form_NY__c.field-meta.xml
<CustomField>
    <fullName>MG2_C4_Form_NY__c</fullName>
    <label>MG2/C4 Form(NY)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>