force-app/main/default/objects/Insurance_Verification__c/fields/Mod_Limit_specify_per_day_visit_prov__c.field-meta.xml
<CustomField>
    <fullName>Mod_Limit_specify_per_day_visit_prov__c</fullName>
    <inlineHelpText>Specify if per day/visit or provider</inlineHelpText>
    <label>Chiro Mod Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>