force-app/main/default/objects/Insurance_Verification__c/fields/Monovisc_J7327__c.field-meta.xml
<CustomField>
    <fullName>Monovisc_J7327__c</fullName>
    <label>Monovisc: J7327</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>