force-app/main/default/objects/Insurance_Verification__c/fields/MRI_72141_In_Network_Phone__c.field-meta.xml
<CustomField>
    <fullName>MRI_72141_In_Network_Phone__c</fullName>
    <label>MRI (72141) In Network Phone #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>