force-app/main/default/objects/Insurance_Verification__c/fields/MRI_72141_OON_Auth_req__c.field-meta.xml
<CustomField>
    <fullName>MRI_72141_OON_Auth_req__c</fullName>
    <label>MRI (72141) OON Auth req?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>