force-app/main/default/objects/Insurance_Verification__c/fields/MRI_In_Network_Auth__c.field-meta.xml
<CustomField>
    <fullName>MRI_In_Network_Auth__c</fullName>
    <label>MRI In Network Auth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>