force-app/main/default/objects/Insurance_Verification__c/fields/NCV_95907_95913__c.field-meta.xml
<CustomField>
    <fullName>NCV_95907_95913__c</fullName>
    <label>NCV: 95907-95913</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>