force-app/main/default/objects/Insurance_Verification__c/fields/No_Medicare__c.field-meta.xml
<CustomField>
    <fullName>No_Medicare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Medicare</label>
    <type>Checkbox</type>
</CustomField>