force-app/main/default/objects/Insurance_Verification__c/fields/No_OON__c.field-meta.xml
<CustomField>
    <fullName>No_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No OON</label>
    <type>Checkbox</type>
</CustomField>