force-app/main/default/objects/Insurance_Verification__c/fields/On_Hold_Until__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Until__c</fullName>
    <label>On Hold Until</label>
    <type>Date</type>
</CustomField>