force-app/main/default/objects/Insurance_Verification__c/fields/OON_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>OON_Auth_Phone__c</fullName>
    <label>72110 OON Auth Phone#</label>
    <type>Phone</type>
</CustomField>