force-app/main/default/objects/Insurance_Verification__c/fields/OON_DME_Coverage__c.field-meta.xml
<CustomField>
    <fullName>OON_DME_Coverage__c</fullName>
    <label>OON DME Coverage?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>