force-app/main/default/objects/Insurance_Verification__c/fields/Orthotics__c.field-meta.xml
<CustomField>
    <fullName>Orthotics__c</fullName>
    <label>Orthotics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>