force-app/main/default/objects/Insurance_Verification__c/fields/Orthotics_CPB_DX__c.field-meta.xml
<CustomField>
    <fullName>Orthotics_CPB_DX__c</fullName>
    <label>Orthotics CPB/DX</label>
    <length>50</length>
    <type>Text</type>
</CustomField>