force-app/main/default/objects/Insurance_Verification__c/fields/Orthotics_DED_Amount__c.field-meta.xml
<CustomField>
    <fullName>Orthotics_DED_Amount__c</fullName>
    <label>Orthotics DED Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>