force-app/main/default/objects/Insurance_Verification__c/fields/Orthotics_Notes__c.field-meta.xml
<CustomField>
    <fullName>Orthotics_Notes__c</fullName>
    <label>Orthotics Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>