force-app/main/default/objects/Insurance_Verification__c/fields/Orthotics_Phone__c.field-meta.xml
<CustomField>
    <fullName>Orthotics_Phone__c</fullName>
    <label>Orthotics Phone #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>