force-app/main/default/objects/Insurance_Verification__c/fields/Orthovisc_J7324__c.field-meta.xml
<CustomField>
    <fullName>Orthovisc_J7324__c</fullName>
    <label>Orthovisc: J7324</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>