force-app/main/default/objects/Insurance_Verification__c/fields/OT_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>OT_Additional_Comments__c</fullName>
    <label>OT Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>