force-app/main/default/objects/Insurance_Verification__c/fields/OT_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>OT_Auth_Phone__c</fullName>
    <label>OT Auth Phone#</label>
    <type>Phone</type>
</CustomField>