force-app/main/default/objects/Insurance_Verification__c/fields/OT_Auth_Required_Details__c.field-meta.xml
<CustomField>
    <fullName>OT_Auth_Required_Details__c</fullName>
    <label>OT Auth Required Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>