force-app/main/default/objects/Insurance_Verification__c/fields/OT_Cigna_ASHN__c.field-meta.xml
<CustomField>
    <fullName>OT_Cigna_ASHN__c</fullName>
    <label>OT Cigna ASHN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>