force-app/main/default/objects/Insurance_Verification__c/fields/OT_Mod_Limit__c.field-meta.xml
<CustomField>
    <fullName>OT_Mod_Limit__c</fullName>
    <inlineHelpText>Please specify if limit is per day/visit or provider</inlineHelpText>
    <label>OT Mod Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>